# crucible-spleem-upload-ui

./: .gitignore  README.md  ai_services.py  backend.py  instrument_conf.py  main.py  main_preview.py  mock_backend.py  prefect_backend.py  pyproject.toml  serve_flows.py  start.bat  start.sh  test_ui.py  tests.py
debug/: debug_user_lookup.py
static/js/: ai_services.js
templates/: index.html
