[project]
name = "crucible-upload-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "nano-crucible==3.0.1",
    "pillow>=12.1.1",
    "prefect>=3.6.25",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
]
